--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.Imaging" version="23.4.0" targetFramework="net472" />
   <package id="Bunifu.Licensing" version="5.0.0" targetFramework="net472" />
   <package id="Bunifu.UI.WinForms.1.5.3" version="1.0.0" targetFramework="net472" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
