--- a/media.csproj
+++ b/media.csproj
@@ -301,10 +301,32 @@
       <DependentUpon>Calculator.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Message.cs" />
+    <Compile Include="ClassNativeUser.cs" />
+    <Compile Include="Classtessssst.cs" />
     <Compile Include="FormProductSingle1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>FormProductSingle.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Formtessst.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formtessst.Designer.cs">
+      <DependentUpon>Formtessst.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Friends\ContactAdaptorPanel.cs" />
+    <Compile Include="Friends\FormContactList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Friends\FormContactList.Designer.cs">
+      <DependentUpon>FormContactList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Friends\FriendRequestAdopter.cs" />
+    <Compile Include="Friends\FriendRequestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Friends\FriendRequestForm.Designer.cs">
+      <DependentUpon>FriendRequestForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ImageCompress.cs" />
     <Compile Include="JpegOptions.cs" />
@@ -315,6 +337,12 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Message\ClassChatList.cs" />
+    <Compile Include="Page\FormPageHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Page\FormPageHome.Designer.cs">
+      <DependentUpon>FormPageHome.cs</DependentUpon>
+    </Compile>
     <Compile Include="PostAdopter.cs" />
     <Compile Include="CreateProduct.cs">
       <SubType>Form</SubType>
@@ -618,8 +646,17 @@
     <EmbeddedResource Include="FormTemp.resx">
       <DependentUpon>FormTemp.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Formtessst.resx">
+      <DependentUpon>Formtessst.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormTest.resx">
       <DependentUpon>FormTest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Friends\FormContactList.resx">
+      <DependentUpon>FormContactList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Friends\FriendRequestForm.resx">
+      <DependentUpon>FriendRequestForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GamesPage.resx">
       <DependentUpon>GamesPage.cs</DependentUpon>
@@ -629,6 +666,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MarketPlaceStats.resx">
       <DependentUpon>MarketPlaceStats.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Page\FormPageHome.resx">
+      <DependentUpon>FormPageHome.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Post.resx">
       <DependentUpon>Post.cs</DependentUpon>
@@ -908,6 +948,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ProfileImage1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-statistics-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-statistics-32 %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-product-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-search-321.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-search-32 %281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets" Condition="Exists('packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets')" />
