--- a/media.csproj
+++ b/media.csproj
@@ -336,6 +336,13 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MarketPlace\FormProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MarketPlace\FormProduct.Designer.cs">
+      <DependentUpon>FormProduct.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MarketPlace\ProductFormAdopter.cs" />
     <Compile Include="Message\ClassChatList.cs" />
     <Compile Include="Page\FormPageHome.cs">
       <SubType>Form</SubType>
@@ -667,6 +674,9 @@
     <EmbeddedResource Include="MarketPlaceStats.resx">
       <DependentUpon>MarketPlaceStats.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MarketPlace\FormProduct.resx">
+      <DependentUpon>FormProduct.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Page\FormPageHome.resx">
       <DependentUpon>FormPageHome.cs</DependentUpon>
     </EmbeddedResource>
@@ -966,6 +976,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8-favorite-96.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-bangladesh-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-star-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-cart-26.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-human-32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets" Condition="Exists('packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets')" />
