--- a/media.csproj
+++ b/media.csproj
@@ -344,6 +344,12 @@
     </Compile>
     <Compile Include="MarketPlace\ProductFormAdopter.cs" />
     <Compile Include="Message\ClassChatList.cs" />
+    <Compile Include="Page\FormInventory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Page\FormInventory.Designer.cs">
+      <DependentUpon>FormInventory.cs</DependentUpon>
+    </Compile>
     <Compile Include="Page\FormPageHome.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -677,6 +683,9 @@
     <EmbeddedResource Include="MarketPlace\FormProduct.resx">
       <DependentUpon>FormProduct.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Page\FormInventory.resx">
+      <DependentUpon>FormInventory.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Page\FormPageHome.resx">
       <DependentUpon>FormPageHome.cs</DependentUpon>
     </EmbeddedResource>
@@ -988,6 +997,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8-human-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-database-32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets" Condition="Exists('packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets')" />
