--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Aspose.Imaging" version="23.4.0" targetFramework="net472" />
+  <package id="BlurWindow" version="5.0.0" targetFramework="net472" />
   <package id="Bunifu.Licensing" version="5.0.0" targetFramework="net472" />
+  <package id="Bunifu.UI.WinForms" version="6.1.0" targetFramework="net472" />
   <package id="Bunifu.UI.WinForms.1.5.3" version="1.0.0" targetFramework="net472" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
   <package id="Fody" version="4.0.2" targetFramework="net472" developmentDependency="true" />
@@ -21,6 +23,7 @@
   <package id="NuGet.Frameworks" version="6.5.0" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="RestSharpSigned" version="105.2.3" targetFramework="net472" />
+  <package id="SixLabors.ImageSharp" version="3.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="6.0.0" targetFramework="net472" />
   <package id="System.ComponentModel.Composition" version="6.0.0" targetFramework="net472" />
