--- a/media.csproj
+++ b/media.csproj
@@ -318,11 +318,6 @@
     <Compile Include="Classes\Message.cs" />
     <Compile Include="ClassNativeUser.cs" />
     <Compile Include="Classtessssst.cs" />
-    <Compile Include="FormProductSingle1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>FormProductSingle.resx</DependentUpon>
-    </Compile>
     <Compile Include="Formtessst.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -482,10 +477,6 @@
     <Compile Include="FormPostSingle.Designer.cs">
       <DependentUpon>FormPostSingle.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormProductSingle.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormProductSingle.Designer.cs" />
     <Compile Include="FormSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -580,6 +571,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SingleProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SingleProduct.Designer.cs">
+      <DependentUpon>SingleProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="Story.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -652,10 +649,6 @@
     <EmbeddedResource Include="FormPostSingle.resx">
       <DependentUpon>FormPostSingle.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormProductSingle.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>FormProductSingle1.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <EmbeddedResource Include="FormSettings.resx">
       <DependentUpon>FormSettings.cs</DependentUpon>
     </EmbeddedResource>
@@ -726,6 +719,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SingleProduct.resx">
+      <DependentUpon>SingleProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Story.resx">
       <DependentUpon>Story.cs</DependentUpon>
