--- a/media.csproj
+++ b/media.csproj
@@ -302,6 +302,18 @@
     <Compile Include="Admin\FormAdminReview.Designer.cs">
       <DependentUpon>FormAdminReview.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormPostPanelForProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPostPanelForProfile.Designer.cs">
+      <DependentUpon>FormPostPanelForProfile.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -616,6 +628,9 @@
     <EmbeddedResource Include="CustomControls\CustomPictureBox.resx">
       <DependentUpon>CustomPictureBox.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form3.resx">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormBase.resx">
       <DependentUpon>FormBase.cs</DependentUpon>
     </EmbeddedResource>
@@ -645,6 +660,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPost.resx">
       <DependentUpon>FormPost.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPostPanelForProfile.resx">
+      <DependentUpon>FormPostPanelForProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPostSingle.resx">
       <DependentUpon>FormPostSingle.cs</DependentUpon>
@@ -1005,6 +1023,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8-database-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-back-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ngW6xzWdgN %281%29.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-less-than-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-less-than-50 %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rsz_1picsart_09-0m7-0940491.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets" Condition="Exists('packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets')" />
