--- a/media.csproj
+++ b/media.csproj
@@ -302,17 +302,30 @@
     <Compile Include="Admin\FormAdminReview.Designer.cs">
       <DependentUpon>FormAdminReview.cs</DependentUpon>
     </Compile>
+    <Compile Include="ClassStory.cs" />
     <Compile Include="Form3.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCreateStory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCreateStory.Designer.cs">
+      <DependentUpon>FormCreateStory.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormPostPanelForProfile.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormPostPanelForProfile.Designer.cs">
       <DependentUpon>FormPostPanelForProfile.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormStorySmall.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormStorySmall.Designer.cs">
+      <DependentUpon>FormStorySmall.cs</DependentUpon>
     </Compile>
     <Compile Include="FormTest.cs">
       <SubType>Form</SubType>
@@ -643,6 +656,9 @@
     <EmbeddedResource Include="DBImageOperation.resx">
       <DependentUpon>DBImageOperation.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormCreateStory.resx">
+      <DependentUpon>FormCreateStory.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormForgetPassword.resx">
       <DependentUpon>FormForgetPassword.cs</DependentUpon>
     </EmbeddedResource>
@@ -675,6 +691,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormStorySingle.resx">
       <DependentUpon>FormStorySingle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormStorySmall.resx">
+      <DependentUpon>FormStorySmall.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTemp.resx">
       <DependentUpon>FormTemp.cs</DependentUpon>
@@ -1038,6 +1057,48 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\rsz_1picsart_09-0m7-0940491.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sbg1.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sbg2.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sbg3.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sbg4.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sbg5.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sbg6.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sbg7.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-down-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-down-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-color-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-plus-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-add-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-add-96.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ads.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets" Condition="Exists('packages\Microsoft.Web.WebView2.1.0.1722.45\build\Microsoft.Web.WebView2.targets')" />
